# hello_eejit

./: CMakeLists.txt  LICENSE  README.md  hello_eejit.cpp  say_hello_to_eejit.sh
